--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,1 +1,8 @@
-{ "rewrites": [ { "source": "/api/index", "destination": "/index.html" } ] }      
+{
+  "rewrites": [
+    {
+      "source": "/api/index",
+      "destination": "/index.html"
+    }
+  ]
+}
